--- a/FreshMVVMSample.iOS/packages.config
+++ b/FreshMVVMSample.iOS/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Fody" version="1.29.2" targetFramework="xamarinios10" />
+  <package id="Fody" version="1.29.4" targetFramework="xamarinios10" developmentDependency="true" />
   <package id="FreshMvvm" version="2.1.0" targetFramework="xamarinios10" />
-  <package id="PropertyChanged.Fody" version="1.50.3" targetFramework="xamarinios10" developmentDependency="true" />
+  <package id="PropertyChanged.Fody" version="1.51.0" targetFramework="xamarinios10" developmentDependency="true" />
+  <package id="Xam.Plugins.Forms.ImageCircle" version="1.4.1" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.2.0.31" targetFramework="xamarinios10" />
 </packages>
