--- a/FreshMVVMSample/packages.config
+++ b/FreshMVVMSample/packages.config
@@ -3,5 +3,6 @@
   <package id="Fody" version="1.29.4" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" developmentDependency="true" />
   <package id="FreshMvvm" version="2.1.0" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" />
   <package id="PropertyChanged.Fody" version="1.51.0" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" developmentDependency="true" />
+  <package id="Xam.Plugins.Forms.ImageCircle" version="1.4.1" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" />
   <package id="Xamarin.Forms" version="2.2.0.31" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" />
 </packages>
